usuario controller updated
validators added

--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,7 @@
     "onion-architecture"
   ],
   "repository": "https://github.com/b3coded/Plataforma-Desafios-JS-API.git",
-  "author": "b3coded, Glaucia Lemos <glaucia86>",
+  "author": "João Alves <b3coded>, Glaucia Lemos <glaucia86>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/b3coded/Plataforma-Desafios-JS-API/issues"
