--- a/api/.env.example
+++ b/api/.env.example
@@ -5,5 +5,5 @@ PORT=5000
 CONNECTION_STRING=mongodb://localhost:27017/api-crud
 
 #JWT CONFIG
-APP_SECRET=plataformadesafios
+APP_SECRET=exemplojwt
 EXPIRES_IN=7d
