--- a/api/package.json
+++ b/api/package.json
@@ -44,7 +44,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.1",
-    "socket.io": "^2.2.0",
-    "yup": "^0.27.0"
+    "socket.io": "^2.2.0"
   }
 }
